--- a/supervisord.conf
+++ b/supervisord.conf
@@ -27,6 +27,7 @@ serverurl=http://127.0.0.1:9001
 
 [program:sshd]
 command = /usr/sbin/sshd -D
+autorestart=true
 
 [program:apache2]
 command=/bin/bash -c "source /etc/apache2/envvars && exec /usr/sbin/apache2 -DFOREGROUND"
@@ -37,5 +38,6 @@ command=/bin/bash -c "source /etc/apache2/envvars && exec /usr/sbin/apache2 -DFO
 ;autorestart=true               ; retstart at unexpected quit (default: true)
 ;startretries=3                 ; max # of serial start failures (default 3)
 
-[program:mysql]
-command = /usr/bin/pidproxy /var/run/mysqld/mysqld.pid /usr/bin/mysqld_safe
+[program:runme]
+command=/tmp/runme.sh
+autostart=true
